--- a/templates/topic_alt_quick_reply.html
+++ b/templates/topic_alt_quick_reply.html
@@ -12,7 +12,7 @@
 		<input form="quick_post_form" id="has_poll_input" name="has_poll" value=0 type="hidden" />
 		<div class="formrow real_first_child">
 			<div class="formitem">
-				<textarea id="input_content" form="quick_post_form" name="reply-content" placeholder="{{lang "topic.reply_content_alt"}}" required></textarea>
+				<textarea id="input_content" form="quick_post_form" name="content" placeholder="{{lang "topic.reply_content_alt"}}" required></textarea>
 			</div>
 		</div>
 		<div class="formrow poll_content_row auto_hide">
