--- a/templates/footer.html
+++ b/templates/footer.html
@@ -9,7 +9,7 @@
 		<div id="poweredBy">
 			<a id="poweredByName" href="https://github.com/Azareal/Gosora">{{lang "footer_powered_by"}}</a><span id="poweredByDash"> - </span><span id="poweredByMaker">{{lang "footer_made_with_love"}}</span>
 		</div>
-		{{if .CurrentUser.IsAdmin}}<div class="elapsed">{{.Header.Elapsed1}} | {{elapsed .Header.StartedAt}}</div>{{end}}
+		{{if .CurrentUser.IsAdmin}}<div title="start to before tmpl" class="elapsed">{{.Header.Elapsed1}}</div><div title="start to footer" class="elapsed">{{elapsed .Header.StartedAt}}</div>{{end}}
 		<form action="/theme/" method="post">
 			<div id="themeSelector">
 				<select id="themeSelectorSelect" name="themeSelector" aria-label="{{lang "footer_theme_selector_aria"}}">
@@ -24,7 +24,7 @@
 </div>
 <div class="footRight"></div>
 </div>
-				<div style="clear: both;"></div>
+				<div style="clear:both;"></div>
 			</div>
 		</div>
 	</body>
