More conversations work. Add support for AS in columns for SimpleInnerJoin. Add a referrer policy to improve privacy a little. Shorten /static/ to /s/ since it comes up so much. Remove some obsolete code. Shorten some variable names. Reduce the amount of boilerplate in the patcher.
Added the RefNoTrack and RefNoRef privacy config settings.

You may need to run the updater / patcher for this commit.

--- a/templates/convo.html
+++ b/templates/convo.html
@@ -3,8 +3,4 @@
 		<h1>{{lang "convo_head"}}</h1>
 	</div>
 </div>
-{{range .Posts}}
-<div class="colstack_item">
-	<div class="rowitem">{{.Body}}</div>
-</div>
-{{end}}
+<div class="colstack_item hash_hide">{{template "convo_row.html" . }}</div>
