--- a/templates/profile.html
+++ b/templates/profile.html
@@ -27,9 +27,9 @@
 			{{if not .CurrentUser.Loggedin}}<div class="rowitem passive">
 				<a class="profile_menu_item">{{lang "profile_login_for_options"}}</a>
 			</div>{{else}}
-			<!--<div class="rowitem passive">
+			<div class="rowitem passive">
 				<a href="/user/convos/create/" class="profile_menu_item">{{lang "profile_send_message"}}</a>
-			</div>-->
+			</div>
 			<!--<div class="rowitem passive">
 				<a class="profile_menu_item">{{lang "profile_add_friend"}}</a>
 			</div>-->
