--- a/templates/header.html
+++ b/templates/header.html
@@ -3,16 +3,16 @@
 	<head>
 		<title>{{.Title}} | {{.Header.Site.Name}}</title>
 		{{range .Header.Stylesheets}}
-		<link href="/static/{{.}}" rel="stylesheet" type="text/css">{{end}}
+		<link href="/s/{{.}}" rel="stylesheet" type="text/css">{{end}}
 		{{range .Header.PreScriptsAsync}}
-		<script async type="text/javascript" src="/static/{{.}}"></script>{{end}}
+		<script async type="text/javascript" src="/s/{{.}}"></script>{{end}}
 		<meta property="x-loggedin" content="{{.CurrentUser.Loggedin}}" />
-		<script type="text/javascript" src="/static/init.js?i=8"></script>
+		<script type="text/javascript" src="/s/init.js?i=9"></script>
 		{{range .Header.ScriptsAsync}}
-		<script async type="text/javascript" src="/static/{{.}}"></script>{{end}}
-		<script type="text/javascript" src="/static/jquery-3.1.1.min.js"></script>
+		<script async type="text/javascript" src="/s/{{.}}"></script>{{end}}
+		<script type="text/javascript" src="/s/jquery-3.1.1.min.js"></script>
 		{{range .Header.Scripts}}
-		<script type="text/javascript" src="/static/{{.}}"></script>{{end}}
+		<script type="text/javascript" src="/s/{{.}}"></script>{{end}}
 		<meta name="viewport" content="width=device-width,initial-scale = 1.0, maximum-scale=1.0,user-scalable=no" />
 		{{if .Header.MetaDesc}}<meta name="description" content="{{.Header.MetaDesc}}" />{{end}}
 		{{/** TODO: Have page / forum / topic level tags and descriptions below as-well **/}}
