--- a/templates/topic_alt_userinfo.html
+++ b/templates/topic_alt_userinfo.html
@@ -1,5 +1,5 @@
 <div class="userinfo" aria-label="{{lang "topic.userinfo_aria"}}">
-	<div class="avatar_item" style="background-image: url({{.Avatar}}), url(/static/white-dot.jpg);background-position: 0px -10px;">&nbsp;</div>
+	<div class="avatar_item" style="background-image:url({{.Avatar}}), url(/s/white-dot.jpg);background-position:0px -10px;">&nbsp;</div>
 	<div class="user_meta">
 		<a href="{{.UserLink}}" class="the_name" rel="author">{{.CreatedByName}}</a>
 		{{if .Tag}}<div class="tag_block"><div class="tag_pre"></div><div class="post_tag">{{.Tag}}</div><div class="tag_post"></div></div>{{else}}<div class="tag_block"><div class="tag_pre"></div><div class="post_tag post_level">{{level .Level}}</div><div class="tag_post"></div></div>{{end}}
