Adjust convo permissions. Speed up convo_view.html Make ContentLines in ConvoViewRow an int as it should be. Shorten common. in the generated templates. Fix the page titles for the convo panes. Stop non-present users from editing their convo posts but still allow them to delete them, if they somehow have a way to do that. Reduce the amount of boilerplate in the currently broken guilds plugin.

--- a/templates/convo.html
+++ b/templates/convo.html
@@ -3,7 +3,10 @@
 		<h1>{{lang "convo_head"}}</h1>
 	</div>
 </div>
-<div class="colstack_item hash_hide">{{template "convo_row.html" . }}</div>
+<div class="colstack_item parti">
+	<div class="rowitem">Participants: Blah, Blah 2, Blah 3</div>
+</div>
+<div class="colstack_item">{{template "convo_row.html" .}}</div>
 {{if not .CurrentUser.IsBanned}}
 <form action="/user/convo/create/submit/{{.Convo.ID}}?s={{.CurrentUser.Session}}" method="post">
 	<div class="colstack_item topic_reply_form" style="border-top:none;">
