Accelerate the convo list. Shorten some things.

--- a/templates/create_convo.html
+++ b/templates/create_convo.html
@@ -4,7 +4,7 @@
 	</div>
 </div>
 <div class="colstack_item the_form">
-	<form action="/user/convos/create/submit/?session={{.CurrentUser.Session}}" method="post">
+	<form action="/user/convos/create/submit/?s={{.CurrentUser.Session}}" method="post">
 		<div class="formrow real_first_child">
 			<div class="formitem formlabel"><a>Recipient/s</a></div>
 			<div class="formitem"><input name="recp" type="text"{{if .RecpName}} value="{{.RecpName}}"{{end}} /></div>
